--- a/002 - Formulário Cadastro/cadastroAluno.html
+++ b/002 - Formulário Cadastro/cadastroAluno.html
@@ -5,105 +5,130 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Aluno</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        
+    </style>
 </head>
 
-<body>
+<body class="bg-gray-100 flex justify-center items-center min-h-screen">
 
-    <main>
-
-
+    <main class="bg-white p-12 rounded-md shadow-md w-96 md:w-2/3 lg:w-1/2">
 
         <!-- Início do formulário -->
 
-        <form>
-            <fieldset class="infoBasica">
-                <h1>Cadastre-se</h1>
+        <form class="space-y-4">
 
-                <!-- Inputs Cadastro -->
+            <h1 class="text-center text-3xl font-bold mb-6 uppercase text-blue-900">Cadastro de Aluno</h1>
 
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nNome" required>
+            <!-- Inputs Cadastro -->
 
-                <label for="sobrenome">Sobrenome</label>
-                <input type="text" id="sobrenome" name="nSobrenome" required>
+            <div class="grid grid-cols-2 gap-4">
+                <div>
+                    <label for="nome" class="block text-md font-semibold text-gray-600">Nome</label>
+                    <input type="text" id="nome" name="nNome" required
+                        class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
+                </div>
+                <div>
+                    <label for="sobrenome" class="block text-md font-semibold text-gray-600">Sobrenome</label>
+                    <input type="text" id="sobrenome" name="nSobrenome" required
+                        class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
+                </div>
+            </div>
 
-                <label for="nasc">Data de Nascimento</label>
-                <input type="date" id="nasc" min="2000-01-01" max="2017-12-31" name="nNascimento" required>
+            <label for="nasc" class="block text-md font-semibold text-gray-600">Data de Nascimento</label>
+            <input type="date" id="nasc" min="2000-01-01" max="2017-12-31" name="nNascimento" required
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="address">Endereço</label>
-                <input type="text" id="address" name="nEndereco">
+            <label for="address" class="block text-md font-semibold text-gray-600">Endereço</label>
+            <input type="text" id="address" name="nEndereco"
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="mae">Nome da Mãe</label>
-                <input type="text" id="mae" name="nMae">
+            <label for="mae" class="block text-md font-semibold text-gray-600">Nome da Mãe</label>
+            <input type="text" id="mae" name="nMae"
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="pai">Nome do Pai</label>
-                <input type="text" id="pai" name="nPai">
+            <label for="pai" class="block text-md font-semibold text-gray-600">Nome do Pai</label>
+            <input type="text" id="pai" name="nPai"
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="nEmail" required>
+            <label for="email" class="block text-md font-semibold text-gray-600">Email</label>
+            <input type="email" id="email" name="nEmail" required
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="tel">Telefone</label>
-                <input type="tel" id="tel" name="nTel" required>
+            <label for="tel" class="block text-md font-semibold text-gray-600">Telefone</label>
+            <input type="tel" id="tel" name="nTel" required
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="serie">Série</label>
-                <input type="number" id="serie" min="1" max="9" name="nSerie" required>
+            <label for="serie" class="block text-md font-semibold text-gray-600">Série</label>
+            <input type="number" id="serie" min="1" max="9" name="nSerie" required
+                class="w-full p-2 border rounded focus:outline-none focus:border-blue-500">
 
-                <label for="sexo">Sexo</label>
-                <div class="checkSexo">
+            <label for="sexo" class="block text-md font-semibold text-gray-600">Sexo</label>
+            <div class="flex items-center space-x-4">
+                <div>
                     <input type="radio" name="sexo" id="fem" value="F" checked>
-                    <label for="fem" id="fem">Feminino</label>
+                    <label for="fem" class="text-md">Feminino</label>
+                </div>
+                <div>
                     <input type="radio" name="sexo" id="masc" value="M">
-                    <label for="masc" id="masc">Masculino</label>
+                    <label for="masc" class="text-md">Masculino</label>
                 </div>
+            </div>
 
-                <!-- Checkbox Necessidades -->
+            <!-- Checkbox Necessidades -->
 
-                <label for="necessidade" class="necessidadestitle">Necessidades Especiais</label>
+            <label for="necessidade" class="block text-md font-semibold text-gray-600 mt-4">Necessidades Especiais</label>
 
-                <div class="necessidadesEspeciais">
-                    <div class="auditiva">
-                        <input type="checkbox" id="auditiva" name="nAuditiva" value="auditiva">
-                        <label for="auditiva">Deficiência Auditiva</label>
-                    </div>
-                    <div class="motora">
-                        <input type="checkbox" id="motora" value="motora" name="nMotora">
-                        <label for="motora">Deficiência Motora</label>
-                    </div>
-                    <div class="visual">
-                        <input type="checkbox" id="visual" value="visual" name="nVisual">
-                        <label for="visual">Deficiência Visual</label>
-                    </div>
-                    <div class="paralisia">
-                        <input type="checkbox" id="paralisia" value="paralisiaCerebral" name="nParalisia">
-                        <label for="paralisia">Paralisia Cerebral</label>
-                    </div>
-                    <div class="autismo">
-                        <input type="checkbox" id="autismo" value="autismo" name="nAutismo">
-                        <label for="autismo">Perturbação do Espectro Autista</label>
-                    </div>
-                    <div class="foro">
-                        <input type="checkbox" id="foro" value="foro" name="nForo">
-                        <label for="foro">Perturbação do Foro Psicológico</label>
-                    </div>
-                    <div class="aprendizagem">
-                        <input type="checkbox" id="aprendizagem" value="aprendizagem" name="nAprendizagem">
-                        <label for="aprendizagem">Pertubações de aprendizagem</label>
-                    </div>
-                    <div class="habilidades">
-                        <input type="checkbox" id="habilidades" value="habilidades" name="nHabilidades">
-                        <label for="habilidades">Altas Habilidades</label>
-                    </div>
+            <div class="grid grid-cols-2 gap-4">
+                <!-- Adicione as checkboxes e labels correspondentes aqui -->
+                <div class="auditiva flex items-center">
+                    <input type="checkbox" id="auditiva" name="nAuditiva" value="auditiva">
+                    <label for="auditiva" class="text-md ml-2">Deficiência Auditiva</label>
                 </div>
-            </fieldset>
+                <div class="motora flex items-center">
+                    <input type="checkbox" id="motora" value="motora" name="nMotora">
+                    <label for="motora" class="text-md ml-2">Deficiência Motora</label>
+                </div>
+                <div class="visual flex items-center">
+                    <input type="checkbox" id="visual" value="visual" name="nVisual">
+                    <label for="visual" class="text-md ml-2">Deficiência Visual</label>
+                </div>
+                <div class="paralisia flex items-center">
+                    <input type="checkbox" id="paralisia" value="paralisiaCerebral" name="nParalisia">
+                    <label for="paralisia" class="text-md ml-2">Paralisia Cerebral</label>
+                </div>
+                <div class="autismo flex items-center">
+                    <input type="checkbox" id="autismo" value="autismo" name="nAutismo">
+                    <label for="autismo" class="text-md ml-2">Perturbação do Espectro Autista</label>
+                </div>
+                <div class="foro flex items-center">
+                    <input type="checkbox" id="foro" value="foro" name="nForo">
+                    <label for="foro" class="text-md ml-2">Perturbação do Foro Psicológico</label>
+                </div>
+                <div class="aprendizagem flex items-center">
+                    <input type="checkbox" id="aprendizagem" value="aprendizagem" name="nAprendizagem">
+                    <label for="aprendizagem" class="text-md ml-2">Perturbações de aprendizagem</label>
+                </div>
+                <div class="habilidades flex items-center">
+                    <input type="checkbox" id="habilidades" value="habilidades" name="nHabilidades">
+                    <label for="habilidades" class="text-md ml-2">Altas Habilidades</label>
+                </div>
+            </div>
             <!-- Botões -->
 
-            <div class="formActions">
-                <button type="button" class="salvar" id="enviarGET">Enviar GET</button>
-                <button type="button" class="salvar" id="enviarPOST">Enviar POST</button>
-
-                <button type="reset" class="resetar">Limpar Tela</button>
+            <div class="flex space-x-4 mt-8">
+                <button id="enviarGET" type="button"
+                    class="btn-save w-full py-2 bg-blue-500 text-white rounded hover:bg-blue-600 mt-7">Enviar
+                    GET</button>
+                <button id="enviarPOST" type="button"
+                    class="btn-save w-full py-2 bg-blue-500 text-white rounded hover:bg-blue-600 mt-7">Enviar
+                    POST</button>
+                <button type="reset"
+                    class="btn-reset w-full py-2 bg-red-500 text-white rounded hover:bg-red-600 mt-7">Limpar
+                    Tela</button>
             </div>
 
         </form>
