--- a/003 - Projeto Urna Eletrônica/index.html
+++ b/003 - Projeto Urna Eletrônica/index.html
@@ -11,14 +11,14 @@
 <body>
 
     <main>
-        <form method="post">
+        <form>
             <h1>Urna Eletrônica</h1>
 
             <div class="container">
                 <div class="candidato">
-                    <img src="/client/assets/img/politico.png" alt="imagem do candidato">
+                    <img src="/client/assets/img/politico.png" class="imgCandidato" alt="imagem do candidato">
                     <p class="nomeCandidato">Ivan Borchardt</p>
-                    <input type="number" name="numeroCandidato" id="inumeroCandidato" minlength="2" placeholder="Número do Candidato" value="00" required>
+                    <input type="number" id="iNumeroCandidato" name="numeroCandidato" id="inumeroCandidato" minlength="2" maxlength="2" placeholder="Número do Candidato" value="00" required>
                 </div>
                 
                 <div class="actionsUrna">
