feat: selected buttons

--- a/003 - Projeto Urna Eletrônica/index.html
+++ b/003 - Projeto Urna Eletrônica/index.html
@@ -18,12 +18,12 @@
                 <div class="candidato">
                     <img src="/client/assets/img/politico.png" class="imgCandidato" alt="imagem do candidato">
                     <p class="nomeCandidato">Ivan Borchardt</p>
-                    <input type="number" id="iNumeroCandidato" name="numeroCandidato" id="inumeroCandidato" minlength="2" maxlength="2" placeholder="Número do Candidato" value="00" required>
+                    <input type="number" id="iNumeroCandidato" name="numeroCandidato" id="inumeroCandidato" minlength="2" maxlength="2" placeholder="Número do Candidato" value="" required>
                 </div>
                 
                 <div class="actionsUrna">
                     <button type="submit" class="confirma">Confirma</button>
-                    <button type="reset" class="corrige">Corrige</button>
+                    <button type="button" class="corrige">Corrige</button>
                     <button type="submit" value="branco" class="branco">Branco</button>
                 </div>
             </div>
