modal de erro ou sucesso

--- a/003ProjetoUrnaEletronica/index.html
+++ b/003ProjetoUrnaEletronica/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urna Eletrônica</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
 </head>
@@ -18,16 +18,16 @@
 
             <div class="container">
                 <div class="candidato">
-                    <img src="/img/politico.png" class="imgCandidato" alt="imagem do candidato">
+                    <img src="img/politico.png" class="imgCandidato" alt="imagem do candidato">
                     <p class="nomeCandidato">Ivan Borchardt</p>
-                    <input type="number" id="iNumeroCandidato" name="numeroCandidato" id="inumeroCandidato" min="0"
+                    <input type="number" id="iNumeroCandidato" name="numeroCandidato" min="0"
                         max="99" minlength="2" maxlength="2" placeholder="Número do Candidato" value="" required>
                 </div>
 
                 <div class="actionsUrna">
                     <button type="button" class="confirma">Confirma</button>
                     <button type="button" class="corrige">Corrige</button>
-                    <button type="submit" value="branco" class="branco">Branco</button>
+                    <button type="button" value="branco" class="branco">Branco</button>
                 </div>
 
                 <div id="modalSucesso" class="modal">
@@ -38,8 +38,8 @@
 
                 <div id="modalErro" class="modal">
                     <div class="modal-content">
-                        <span class="close" onclick="fecharModal('modalErro')">&times;</span>
-                        <p>Erro ao registrar voto. Contate o administrador do sistema.</p>
+                        <p class="modal-info">Erro ao registrar voto. Contate o administrador do sistema.</p>
+                        <span class="close" onclick="fecharModal('modalErro')">FECHAR</span>
                     </div>
                 </div>
             </div>
