--- a/003ProjetoUrnaEletronica/resultado.html
+++ b/003ProjetoUrnaEletronica/resultado.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado Eleições</title>
+    <script defer src="js/resultado.js"></script>
+    <link rel="stylesheet" href="css/resultado.css">
 </head>
 <body>
-    <h1>supp</h1>
+    <h1>Resultado da Apuração</h1>
+    <div class="podio" id="resultadoApuracao">
+        <div class="posicao" id="primeiroLugar">
+            <img src="" alt="">
+            <p>nome candidato</p>
+            <span>posicao no podium</span>
+        </div>
+        <div class="posicao" id="segundoLugar">
+            <img src="" alt="">
+            <p>nome candidato</p>
+            <span>posicao no podium</span>
+        </div>
+        <div class="posicao" id="terceiroLugar">
+            <img src="" alt="">
+            <p>nome candidato</p>
+            <span>posicao no podium</span>
+        </div>
+    </div>
+    <div class="quarto_quintolugar">
+        <p id="posicao4"></p>
+        <p id="posicao5"></p>
+    </div>
     
 </body>
 </html>
