--- a/003 - Projeto Urna Eletronica/resultado.html
+++ b/003 - Projeto Urna Eletronica/resultado.html
@@ -6,6 +6,7 @@
     <title>Resultado Eleições</title>
     <script defer src="js/resultado.js"></script>
     <link rel="stylesheet" href="css/resultado.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <h1>Resultado da Apuração</h1>
