--- a/004 - CRUD cadastro/client/index.html
+++ b/004 - CRUD cadastro/client/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <script defer src="./js/script.js"></script>
     <title>Login</title>
 </head>
@@ -16,33 +16,22 @@
         <section class="form-container sign-up">
             <form>
                 <h1>Criar Conta</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
                 <span>ou use seu email para cadastrar-se</span>
-                <input type="text" placeholder="Nome">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Senha">
-                <button type="button">Criar Conta</button>
+                <input type="text" id="user-register" placeholder="Usuário">
+                <input type="email" id="email-register" placeholder="Email">
+                <input type="password" id="password-register" placeholder="Senha">
+                <button type="button" id="create-account">Criar Conta</button>
+                <p id="output">Conta criada com sucesso!</p>
             </form>
         </section>
         <section class="form-container sign-in">
             <form>
                 <h1>Entrar</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
                 <span>ou use seu usuário e senha</span>
-                <input type="email" placeholder="Usuário">
-                <input type="password" placeholder="Senha">
+                <input type="email" id="user-login" placeholder="Usuário">
+                <input type="password" id="password-login" placeholder="Senha">
                 <a href="#">Esqueceu sua senha?</a>
-                <button type="button">Login</button>
+                <button type="button" id="actually-login">Login</button>
             </form>
         </section>
         <div class="toggle-container">
@@ -60,7 +49,6 @@
             </div>
         </div>
     </main>
-
    
 </body>
 
